# labtools

./: .bazelignore  .bazelrc  .editorconfig  .gitignore  .pre-commit-config.yaml  AUTHORS  BUILD  README.md  WORKSPACE  package-lock.json  package.json  pyproject.toml  pytype.cfg  requirements.txt  setup.cfg
.buildkite/: pipeline.yml
.buildkite/hooks/: post-checkout
.github/: renovate.json  semantic.yaml
config/infra/buildkite/: BUILD  buildkite-agent.yaml  deps.bzl  entrypoint.sh
distro/labtools/: README.md  WORKSPACE  requirements.txt
examples/jinja-nginx/: BUILD  deployment.yaml.j2
examples/pip-compat-test/: BUILD  pip_compat_test.py
jinja/: BUILD  defs.bzl  deps.bzl  jinja.bzl
jinja/_src/: dummy.yml.j2  jinja.py
jupyter/: BUILD  defs.bzl
labtools/: BUILD  __init__.py  config.py  deps.bzl  experimental.py  testing.py
labtools/_src/: BUILD  __init__.py  config.py  config_test.py  gin_utils.py  gin_utils_test.py  huggingface.py  io.py  io_test.py  io_util.py  io_util_test.py  plotting.py  plotting_test.py  profiling.py  util.py
labtools/_src/testing/: BUILD  _testcase.py
labtools/e2e/: BUILD  labtools_import_test.py
pytype/: BUILD  defs.bzl
pytype/_src/: pytype_helper.py
repositories/: deps.bzl  repositories.bzl
tools/: BUILD  defs.bzl  format.sh  requirements.in  requirements.txt  test-requirements.in  test-requirements.txt
tools/linting/: BUILD  aspect.bzl
tools/python/interpreter/: BUILD  defs.bzl
