[metadata]
name = labtools
version = 0.0.1.dev
author = Cory Paik
author_email = corypaik@gmail.com
license = Apache 2.0
license_file = LICENSE
description = A collection of research-oriented tools for working with Bazel.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/corypaik/labtools

[options]
packages = find:
# support for :=
python_requires = >=3.8
include_package_data = True
install_requires =
  absl-py==0.10.0
  toolz==0.11.1
